Bug 361990 - Invitation prompt remains after joining channel(s)
Summary: Invitation prompt remains after joining channel(s)
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-20 06:26 UTC by Luke-Jr
Modified: 2016-09-14 15:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke-Jr 2016-04-20 06:26:34 UTC
When invited to a channel, Konversation prompts me as configured. When I click OK to join the channel, it works, but leaves the prompt open until I click Cancel. This is a regression from 1.5.1.
Comment 1 Peter Simonsson 2016-09-14 15:51:05 UTC
Git commit 67d523c6dc5d94d187be4204b840ac0dbe9bb5dc by Peter Simonsson.
Committed on 14/09/2016 at 15:50.
Pushed by psn into branch 'master'.

Make sure invite dialog closes on Ok

M  +2    -0    src/irc/invitedialog.cpp

http://commits.kde.org/konversation/67d523c6dc5d94d187be4204b840ac0dbe9bb5dc