Make sure invite dialog closes on Ok

BUG:361990